# mother-is-mothering

./: LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
src/: __init__.py  lyrics_generator.py  mothers_words.py  ts-lyrics.pkl
src/mothers_words/: __init__.py  mothers_words.py
